Update UpgradeIntegrationTest to use n-3 to current Marathon versions (#7080)
- Instead of hard-coding so many lines to a specific version of Marathon, we change the test to talk about n-3 to n-1 versions of Marathon
- Test suite fails if n-1 minor version is current minor version - 1, helping us to remember to keep this test updated in the future
- Add task-id parsing unit test

JIRA Issues: MARATHON-8703